# components

./: .gitignore  Gitflow.drawio  README.md
c/: ac_map.c
c/ac_str/: ac_str_builder.c  ac_str_builder.h  ac_str_list.c  ac_str_list.h
c/ac_str/test/: test_ac_str_list.cpp
cpp/ac_cache/: .gitignore  CMakeLists.txt  ac_lru_cache.cpp  ac_lru_cache.h
cpp/ac_cache/test/: CMakeLists.txt  test_ac_lru_cache  test_ac_lru_cache.cpp  test_queue_lru_cache.cpp
docs/: README.md
docs/git/: commits.md  gitflow.md  hooks.md  trunk.md
git/: README.md  Untitled Diagram.drawio
git/javascript/: README.md  verify-bundle.sh
git/javascript/hooks/: pre-commit  pre-push
go/helpers/: go.mod
go/helpers/internal/client/: retry.go  retry_test.go
go/helpers/internal/utils/: asyncQueue.go  asyncQueue_test.go
go/make/: Makefile
go/scripts/: pre-commit
helpers/semver-check/: semver.py  test_semver.py
javascript/react/: .eslintrc.json  package-lock.json  package.json
javascript/react/src/: App.tsx
javascript/react/src/components/: ContextMenu.tsx  Login.tsx
javascript/react/src/hooks/: useDebounce.ts
javascript/react/src/utils/: HttpClient.ts
javascript/utils/: babel.config.json  package.json
javascript/utils/src/: asyncQueue.js  promise.js
javascript/utils/src/__tests__/: asyncQueue.test.js
js/: .gitignore
js/react/: package-lock.json  package.json
js/react/src/components/: Login.tsx
js/react/src/helpers/: cookies.ts  helpers.ts
js/react/src/utils/: HttpClient.ts  HttpError.ts
js/utils/: jest.config.js  package-lock.json
js/utils/src/: asyncQueue.js
js/utils/src/__tests__/: asyncQueue.test.js  promise.test.js
lib/ac_data/: .gitignore  CMakeLists.txt  ac_list.c  ac_list.h  ac_str_builder.c  ac_str_builder.h  ac_string.c  ac_string.h
lib/ac_data/test/: CMakeLists.txt  test_ac_list.cpp  test_ac_str_builder  test_ac_str_builder.cpp  test_ac_string.cpp
lib/ac_str/: .gitignore  CMakeLists.txt  ac_str_builder.c  ac_str_builder.h  ac_str_list.c  ac_str_list.h
lib/ac_str/test/: CMakeLists.txt  test_ac_str_builder.cpp  test_ac_str_list.cpp
python/: .gitignore
python/nlp/classification/classify_multi_class/: .gitignore  classify_test.py  classify_train.py
python/nlp/classification/classify_multi_class_ft/: .gitignore  classify_test.py  classify_train.py  requirements.txt
python/nlp/classification/classify_multi_class_sp/: .gitignore  classify_prepare.py  classify_test.py  config.cfg  labels.txt
python/nlp/classification/classify_multi_class_tf/: .gitignore  classify_test.py  classify_train.py
python/semverify/: README.md  semverify.py  test_semverify.py
react/: .babelrc  .eslintrc.json  .prettierrc.json  jest.config.js  jest.setup.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
react/hooks/: useDebounce.tsx
react/src/: App.module.css  App.tsx  index.html  index.tsx
react/src/__mocks__/: jest.setup.js
react/src/components/: ContextMenu.module.css  ContextMenu.tsx
react/src/helpers/: helpers.ts
react/src/hooks/: useScrollLock.ts
react/src/models/: utils.ts
ts/: .gitignore
ts/react/: .eslintrc.json  webpack.config.js
ts/react/src/components/: Login.module.css
ts/scripts/: pre-commit  pre-commit-test.sh  pre-push
ts/utils/: .prettierrc.json  jest.config.js  package-lock.json  package.json  tsconfig.json
(+24 files in other folders)
